--- a/index.html
+++ b/index.html
@@ -9,23 +9,79 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">GIF Libs Stories</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Save a GIF Lib <span class="sr-only">(current)</span></a>
+        </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        <!-- </li> -->
+      </ul>
+      <!-- <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div> -->
   </nav>
-  <div class="container-fluid ">
-    <div class="container-left"></div>
-    <div class="h1">test1</div>
+  <div id="initial" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-4 col-sm-4 col-xs-4">
+    <div class="row">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h1>GIF Libs</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <button id="create" type="button" class="btn btn-lg btn-primary">Create</button>
+      </div>
+    </div>
+  </div>
+  <div id="picker" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-8 col-sm-8 col-xs-8">
+    <h2>Pick an Adjective:</h2>
     <div class="container">
-      <iframe src="https://giphy.com/embed/Q7Eezvahu2Hrq" width="331" height="480" frameBorder="0" class="giphy-embed"></iframe>
+      <div class="container">
+        <iframe id="image" src="https://giphy.com/embed/Q7Eezvahu2Hrq" width="331" height="480" frameBorder="0" class="giphy-embed" style="pointer-events: none;"></iframe>
+      </div>
+    </div>
+  </div>
+  <div id="story" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-8 col-sm-8 col-xs-8">
+    <div class="row">
+      <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 col-xs-12">
+        <h2>Once upon a time there was a BEAUTIFUL</h2>
+      </div>
+      <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12">
+        <iframe id="image" src="https://giphy.com/embed/Q7Eezvahu2Hrq" width="331" height="480" frameBorder="0" class="giphy-embed" style="pointer-events: none;"></iframe>
+      </div>
     </div>
   </div>
 
 
-  <!-- <embed type="video/quicktime" src="https://giphy.com/embed/3o6UBaG7vD4Tcb6egE" width="300" height="300"> -->
 
-  <script type="text/javascript"></script>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  <script type="text/javascript" src="src/main.js"></script>
+  <script type="text/javascript "></script>
+  <script type="text/javascript " src="https://code.jquery.com/jquery-3.3.1.js "></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
+  <script type="text/javascript " src="src/main.js "></script>
 </body>
 
 </html>
