get DOM appends working

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       </div>
     </div>
   </div>
-  <div id="picker" class="container-fluid text-center align-center col-xl-12 col-lg-8 col-md-8 col-sm-8 col-xs-8">
-    <h2>Pick an Adjective:</h2>
-    <div class="container">
-      <div class="container">
-        <iframe id="image" src="https://giphy.com/embed/Q7Eezvahu2Hrq" width="331" height="480" frameBorder="0" class="giphy-embed" style="pointer-events: none;"></iframe>
-      </div>
+  <div id="picker" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="wordtype">
+      <h2>Pick an Adjective:</h2>
+    </div>
+    <div class="row" id="pickerRow">
+
     </div>
   </div>
   <div id="story" class="container-fluid text-center align-center col-xl-12 col-lg-8 col-md-8 col-sm-8 col-xs-8">
@@ -70,7 +70,7 @@
         <h2>Once upon a time there was a BEAUTIFUL</h2>
       </div>
       <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <iframe id="image" src="https://giphy.com/embed/Q7Eezvahu2Hrq" width="331" height="480" frameBorder="0" class="giphy-embed" style="pointer-events: none;"></iframe>
+        <iframe id="image" src="https://giphy.com/embed/Q7Eezvahu2Hrq" width="331" height="480" frameBorder="0" class="giphy-embed"></iframe>
       </div>
     </div>
   </div>
