--- a/index.html
+++ b/index.html
@@ -60,18 +60,19 @@
     <div class="wordtype">
       <h2>Pick an Adjective:</h2>
     </div>
-    <div class="row" id="pickerRow">
-
+    <div id="pickerRow" class="row">
+      <!-- gifs to pick from will be added here -->
     </div>
   </div>
   <div id="story" class="container-fluid text-center align-center col-xl-12 col-lg-8 col-md-8 col-sm-8 col-xs-8">
-    <div class="row">
-      <div class="col-xl-8 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <h2>Once upon a time there was a BEAUTIFUL</h2>
+    <div id="storyRow" class="row">
+      <!-- words and picked gifs will be added here -->
+      <!-- <div class="col-xl-8 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h2>Once upon a time there was a beautiful KNIGHT</h2>
       </div>
       <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <iframe id="image" src="https://giphy.com/embed/Q7Eezvahu2Hrq" width="331" height="480" frameBorder="0" class="giphy-embed"></iframe>
-      </div>
+      </div> -->
     </div>
   </div>
 
