make dynamic pick word text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
   </div>
   <div id="picker" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div class="wordtype">
-      <h2>Pick an Adjective:</h2>
+      <h2 id="pickWord" class="d-inline col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6">Pick</h2>
+      <h2 id="searchWord" class="d-inline pl-0 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6"></h2>
     </div>
     <!-- gifs to pick from will be added here -->
   </div>
@@ -69,7 +70,7 @@
 
 
   <script type="text/javascript "></script>
-  <script type="text/javascript " src="https://code.jquery.com/jquery-3.3.1.js "></script>
+  <script type="text/javascript " src="https://code.jquery.com/jquery-3.3.1.min.js "></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
   <script type="text/javascript " src="src/main.js "></script>
