--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <!-- <li class="nav-item active">
           <a class="nav-link" href="#">Save a GIF Lib <span class="sr-only">(current)</span></a>
-        </li>
+        </li> -->
         <!-- <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
@@ -44,6 +44,7 @@
       </form>
     </div> -->
   </nav>
+  <a id="top"></a>
   <div id="initial" class="container-fluid text-center align-center col-xl-12 col-lg-8 col-md-4 col-sm-4 col-xs-4">
     <div class="row">
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
