use small images for previews, increase gif selection count

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light text-center">
     <a class="navbar-brand" href="#">GIF Libs Stories</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -56,6 +56,7 @@
         <button id="create" type="button" class="btn btn-lg btn-primary">Create</button>
       </div>
     </div>
+
   </div>
   <div id="picker" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div class="wordtype">
