--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light text-center">
+  <nav class="navbar  navbar-light bg-light text-center">
     <a class="navbar-brand" href="#">GIF Libs Stories</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
     </div> -->
   </nav>
   <a id="top"></a>
-  <div id="initial" class="container-fluid text-center align-center col-xl-12 col-lg-8 col-md-4 col-sm-4 col-xs-4">
+  <div id="initial" class="container-fluid text-center align-center col-xl-12 col-lg-6 col-md-6 col-sm-6 col-xs-6">
     <div class="row">
       <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <h1>GIF Libs</h1>
@@ -60,8 +60,10 @@
   </div>
   <div id="picker" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div class="wordtype">
+      <span>
       <h2 id="pickWord" class="d-inline col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6">Pick</h2>
       <h2 id="searchWord" class="d-inline pl-0 col-xl-6 col-lg-6 col-md-6 col-sm-6 col-xs-6"></h2>
+      </span>
     </div>
     <!-- gifs to pick from will be added here -->
   </div>
