--- a/index.html
+++ b/index.html
@@ -45,37 +45,42 @@
       </form>
     </div> -->
   </nav>
-  <a id="top"></a>
-  <div id="initial" class="container-fluid text-center align-center col-xl-6 col-lg-8 col-md-8 col-sm-10 col-xs-10">
-    <div id="logoBox" class="row">
-      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <img src="images/gifLibs.png" alt="logo" class="logoBig"></img>
-      </div>
-      <!-- <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+  <div id="storyCover">
+    <div id="initialContainer">
+      <div id="initial" class="container-fluid text-center align-center col-xl-6 col-lg-10 col-md-12 col-sm-12 col-xs-12">
+        <div id="logoBox" class="row">
+          <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <img src="images/gifLibs.png" alt="logo" class="logoBig"></img>
+          </div>
+          <!-- <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <h1>GIF Libs</h1>
       </div> -->
-    </div>
-    <div class="row">
-      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <button id="create" type="button" class="btn btn-lg btn-primary">Create</button>
+        </div>
+        <div class="row">
+          <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <button id="create" type="button" class="btn btn-lg btn-primary">Create</button>
+          </div>
+        </div>
+
       </div>
-    </div>
+      <div id="picker" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <div class="wordtype">
+          <div>
+            <h3 id="pickWord" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">PICK</h3>
+          </div>
 
-  </div>
-  <div id="picker" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <div class="wordtype">
-      <div>
-        <h3 id="pickWord" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">PICK</h3>
+          <h2 id="searchWord" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12"></h2>
+
+        </div>
+        <!-- gifs to pick from will be added here -->
+      </div>
+      <div id="story" class="container-fluid text-center align-center col-xl-12 col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <!-- words and picked gifs will be added here -->
       </div>
 
-      <h2 id="searchWord" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12"></h2>
-
     </div>
-    <!-- gifs to pick from will be added here -->
   </div>
-  <div id="story" class="container-fluid text-center align-center col-xl-12 col-lg-10 col-md-10 col-sm-10 col-xs-10">
-    <!-- words and picked gifs will be added here -->
-  </div>
+
 
 
 
