more visual updates

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <nav id="navbar" class="navbar justify-content-center navbar-light bg-light text-center">
+  <nav id="navbar" class="navbar justify-content-center navbar-dark bg-dark text-center">
     <img src="images/gifLibs.png" alt="logo" class="logo">
     <a class="navbar-brand" href="#">GIF Libs Stories</a>
     <button class="navbar-toggler ml-auto p-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
