randomize selection order and add picker counter

--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
       </div>
       <div id="picker" class="container-fluid text-center align-center col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="wordtype">
-          <div>
+          <div class="pickWordBox">
+
             <h3 id="pickWord" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">PICK</h3>
+            <h3 id="numPicked">1</h3>
+            <h3>of 14</h3>
+
           </div>
 
           <h2 id="searchWord" class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12"></h2>
