--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <nav id="navbar" class="navbar justify-content-center navbar-dark bg-dark text-center">
     <img src="images/gifLibs.png" alt="logo" class="logo">
     <a class="navbar-brand" href="#">GIF Libs Stories</a>
+
+
     <button class="navbar-toggler ml-auto p-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -46,6 +48,9 @@
     </div> -->
   </nav>
   <div id="storyCover">
+    <div id="storyTitleBox">
+      <h2 class="text-center" id="storyTitle">The Fishing Incident</h2>
+    </div>
     <div id="initialContainer">
       <div id="initial" class="container-fluid text-center align-center col-xl-6 col-lg-10 col-md-12 col-sm-12 col-xs-12">
         <div id="logoBox" class="row">
@@ -77,22 +82,28 @@
 
         </div>
         <!-- gifs to pick from will be added here -->
+
       </div>
+      <!-- <div class="storyTitleBox"> -->
+
+      <!-- </div> -->
+
       <div id="story" class="container-fluid text-center align-center col-xl-12 col-lg-10 col-md-10 col-sm-10 col-xs-10">
-        <!-- words and picked gifs will be added here -->
+
+        <!-- gifs to pick from will be added here -->
       </div>
+
 
     </div>
-  </div>
 
 
 
 
-  <script type="text/javascript "></script>
-  <script type="text/javascript " src="https://code.jquery.com/jquery-3.3.1.min.js "></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
-  <script type="text/javascript " src="src/main.js "></script>
+    <script type="text/javascript "></script>
+    <script type="text/javascript " src="https://code.jquery.com/jquery-3.3.1.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js " integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q " crossorigin="anonymous "></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl " crossorigin="anonymous "></script>
+    <script type="text/javascript " src="src/main.js "></script>
 </body>
 
 </html>
